--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,33 @@
-<resources>
-    <string name="app_name">Android New Widgets Demo</string>
+<!--
+  ~ /*
+  ~  *
+  ~  *  *
+  ~  *  *  * ===================================
+  ~  *  *  * Copyright (c) 2016.
+  ~  *  *  * 作者：安卓猴
+  ~  *  *  * 微博：@安卓猴
+  ~  *  *  * 博客：http://sunjiajia.com
+  ~  *  *  * Github：https://github.com/opengit
+  ~  *  *  *
+  ~  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+  ~  *  *  * ===================================
+  ~  *  *
+  ~  *  *
+  ~  *
+  ~  */
+  -->
 
-    <string name="toolbar_title">New Demo</string>
-    <string name="action_settings">settings</string>
-    <string name="open">打开</string>
-    <string name="close">关闭</string>
-    <string name="header_author_name">安卓猴</string>
-    <string name="header_author_url">sunjiajia.com</string>
-    <string name="plusone">+1</string>
-    <string name="item_clicked">item clicked！</string>
-    <string name="item_longclicked">item long clicked！</string>
+<resources>
+  <string name="app_name">Android New Widgets Demo</string>
+
+  <string name="toolbar_title">New Demo</string>
+  <string name="action_settings">settings</string>
+  <string name="open">打开</string>
+  <string name="close">关闭</string>
+  <string name="header_author_name">安卓猴</string>
+  <string name="header_author_url">sunjiajia.com</string>
+  <string name="plusone">+1</string>
+  <string name="item_clicked">item clicked！</string>
+  <string name="item_longclicked">item long clicked！</string>
 
 </resources>
